--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
+    "@fontsource/noto-sans-ethiopic": "^5.2.7",
     "@fontsource/tajawal": "^5.2.7",
     "@tanstack/react-query": "^5.89.0",
     "adhan": "^4.4.3",
@@ -19,11 +20,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.556.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.48.0",
+    "react-i18next": "^16.5.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "sonner": "^2.0.7",
